# pytorch-unattached

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  setup.py
.jenkins/pytorch/: build.sh  macos-build.sh  macos-test.sh
aten/cmake/: FindCuDNN.cmake
c10/: CMakeLists.txt  c10.cpp  c10.h  prototype.cpp  prototype.h
c10/c10/: ArrayRef.cpp  ArrayRef.h  Assert.cpp  Assert.h  Context.h  DataType.cpp  DataType.h  DimVector.cpp  DimVector.h  Error.cpp  Error.h  Functions.cpp  Functions.h  KeywordArgs.h  Optional.h  Registry.h  ScalarType.cpp  ScalarType.h  ScopeGuard.h  SmallVector.cpp  SmallVector.h  Storage.h  Tensor.cpp  Tensor.h  TensorMethods.h  ThreadContext.cpp  TypeId.cpp  TypeId.h  Utils.cpp  Utils.h  c10.h
c10/c10/cpu/: CPUAllocator.cpp  CPUAllocator.h  CPUContext.cpp  CPUContext.h  CPUStorage.cpp  CPUStorage.h  CPUTensorImpl.cpp  CPUTensorImpl.h
c10/c10/cpu/op/: CPUAll.cpp  CPUAll.h  CPUAll_test.cpp
c10/c10/cpu/ops/: TensorShape.cpp  TensorShape.h
c10/c10/cuda/: CUDAStorage.cpp  CUDAStorage.h
c10/c10/dispatch/: DispatchKey.cpp  DispatchKey.h  DispatchTypeId.cpp  DispatchTypeId.h  Dispatcher.cpp  Dispatcher.h  DispatcherExample.cpp  KernelRegistration.cpp  KernelRegistration.h  OpId.cpp  OpId.h  OpRegistration.cpp  OpRegistration.h  OpSchema.cpp  OpSchema.h  OpSchemaRegistration.h  OpSchema_test.cpp  OpSig.h  OpSig_test.cpp  ProtoParserExample.cpp  TensorTypeId.cpp  TensorTypeId.h  TensorTypeIdRegistration.cpp  TensorTypeIdRegistration.h
c10/c10/dispatch/impl/: DispatchKey.h  DispatchTable.cpp  DispatchTable.h
c10/c10/guts/: Any.cpp  Any.h  C++17.h  CPUStorage.cpp  CPUStorage.h  IdWrapper.h  IntrusivePtr.cpp  Macros.h  Metaprogramming.h  Metaprogramming_test.cpp  Retainable.cpp  Retainable.h  ScalarType.cpp  ScalarType.h  Storage.cpp  Storage.h  TensorImpl.cpp  TensorImpl.h  TypeId.cpp  TypeId.h  TypeList.h  TypeList_test.cpp  TypeTraits.h  TypeTraits_test.cpp  scope_guard.cpp  types.cpp
c10/c10/guts/caffe2/: common.cc  typeid.cc  typeid.h
c10/c10/impl/: TensorImpl.cpp  TensorImpl.h
c10/c10/op/: All.cpp  All.h  All_test.cpp  OpSchemaDefs.cpp  OpSchemaDefs.h
c10/c10/ops/: Constructors.cpp
c10/c10/stack_bindings/: CallStack.cpp  CallStack.h  ParameterStack.h  StackBasedOperator.h  StackBasedOperatorRegistry.cpp  StackBasedOperatorRegistry.h
c10/c10/test/: scratch.cpp
c10/test/: basic.cpp
c10_prototype/: CMakeLists.txt  c10.h
c10_prototype/c10/: AlignOf.h  ArrayRef.cpp  Context.cpp  Context.h  DataType_test.cpp  Functions.h  KeywordArgs.h  Tensor.h
caffe2/: CMakeLists.txt
caffe2/c10_prototype/: CMakeLists.txt  c10.h
caffe2/c10_prototype/c10/: AlignOf.cpp  Context.h  DataType.h  Error.cpp  Error.h  Functions.h  General.cpp  General.h  KeywordArgs.cpp  Registry.h  Registry_test.cpp  ScopeGuard.h  SmallVector.h  Tensor.cpp  ThreadContext.h  Utils.h
caffe2/c10_prototype/c10/cpu/: CPUAllocator.cpp  CPUContext.h  CPUStorage.h  CPUTensorImpl.cpp  CPUTensorImpl.h
caffe2/c10_prototype/c10/cpu/op/: CPUAll.cpp  CPUAll_test.cpp
caffe2/c10_prototype/c10/dispatch/: Dispatcher.cpp  Dispatcher.h  DispatcherExample.cpp  KernelRegistration.h  OpSchema.h  OpSchema_test.cpp  OpSig.cpp  ProtoParserExample.cpp
caffe2/c10_prototype/c10/dispatch/impl/: DispatchKey.cpp  DispatchKey.h  DispatchTable.h
caffe2/c10_prototype/c10/guts/: Any.h  IntrusivePtr.h  TensorImpl.cpp  TensorImpl.h  scope_guard.h
caffe2/c10_prototype/c10/op/: All.cpp  All.h  OpSchemaDefs.cpp
caffe2/c10_prototype/c10/stack_bindings/: ParameterStack.cpp  ParameterStack.h  StackBasedOperator.cpp  StackBasedOperator.h  StackBasedOperatorRegistry.h
caffe2/core/: cpu_tensor.h  net.h  net_async_base.h  net_async_tracing.cc  net_async_tracing.h  net_dag.cc  net_dag.h  net_dag_utils.h  net_simple.h  net_simple_async.h  net_singlethread_async_gpu.cc  observer_test.cc  operator.cc  operator.h  operator_c10wrapper.cc  operator_c10wrapper.h  plan_executor.cc  tensor.h  typeid.cc  typeid.h  types.cc
caffe2/observers/: profile_observer.h  profile_observer_gpu.cc  runcnt_observer.cc  runcnt_observer.h  time_observer.cc  time_observer.h
caffe2/operators/: CMakeLists.txt  c10_dummy_op.cc  c10_elementwise_linear.cc  c10_sigmoid_op.cc  c10_sigmoid_op.h  c10_sigmoid_op_cpu.cc  dummy_op.cc
caffe2/utils/: CMakeLists.txt  Macros.cpp
docs/onnx_docs/: Super-Resolution-tutorial.ipynb  Tutorial for running models using ONNX.ipynb  super_resolution_with_caffe2.ipynb
docs/source/: onnx.rst
docs/toffee_docs/: Super-Resolution-tutorial.ipynb
modules/observers/: perf_observer.cc  perf_observer.h
scripts/model_zoo/: update-models-from-caffe2.py
test/: common.py  run_test.sh  test_autograd.py  test_jit.py  test_models.py  test_onnx.py  test_sparse.py
test/expect/: TestJit.test_alexnet.expect  TestJit.test_backward.expect  TestJit.test_batchnorm.expect  TestJit.test_c_function.expect  TestJit.test_conv.expect  TestJit.test_conv_export.expect  TestJit.test_dcgan-dcgan-netD.expect  TestJit.test_export_data.expect  TestJit.test_function_as_argument.expect  TestJit.test_leaky_relu-pbtxt.expect  TestJit.test_leaky_relu.expect  TestJit.test_lstm.expect  TestJit.test_ops-pbtxt.expect  TestJit.test_ops.expect  TestJit.test_simple.expect  TestJit.test_simple_trace.expect  TestJit.test_trace_backward.expect  TestJit.test_word_language_model_GRU.expect  TestJit.test_word_language_model_LSTM.expect  TestJit.test_word_language_model_RNN_TANH.expect  TestModels.test_alexnet-pbtxt.expect  TestModels.test_alexnet.expect  TestModels.test_concat-pbtxt.expect  TestModels.test_concat.expect  TestModels.test_dcgan-dcgan-netD-pbtxt.expect  TestModels.test_dcgan-dcgan-netD.expect  TestModels.test_dcgan-dcgan-netG-pbtxt.expect  TestModels.test_dcgan-dcgan-netG.expect  TestModels.test_densenet-121-pbtxt.expect  TestModels.test_densenet-121.expect  TestModels.test_inception-3-pbtxt.expect  TestModels.test_inception-3.expect  TestModels.test_mnist.expect  TestModels.test_ops-pbtxt.expect  TestModels.test_ops.expect  TestModels.test_permute-pbtxt.expect  TestModels.test_prelu.expect  (+25 more)
torch/: jit.py  onnx.py  toffee.py
(+146 files in other folders)
